--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,12 @@
             <artifactId>spring-security-crypto</artifactId>
             <version>6.4.3</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/com.nimbusds/nimbus-jose-jwt -->
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>10.0.1</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
